# Simulation-of-the-spread-of-diseases-in-the-population

./: README.md  pyproject.toml
reports/report1/: bibliography.bib  report1-english.tex  report1.tex
scripts/: run_simulation.py
src/simulation/: agents.py  model.py
